# pytest-diagnostic-training

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
docs/: architecture.md  extending.md  usage.md
examples/: chassis_members_failure_example.py  test_passive_diagnostics.py
pytest_diagnostics/: __init__.py  plugin.py
pytest_diagnostics/analyzers/: __init__.py  assertion_analyzer.py  base.py  dependency_analyzer.py  http_analyzer.py  timeout_analyzer.py
pytest_diagnostics/collectors/: __init__.py  allure_collector.py  base.py  httpx_collector.py  pytest_collector.py  requests_collector.py  timing_collector.py  traceback_collector.py
pytest_diagnostics/core/: __init__.py  context.py  lifecycle.py  models.py  runtime.py  signal_store.py
pytest_diagnostics/diagnostics/: __init__.py  formatter.py  models.py
pytest_diagnostics/engine/: __init__.py  matcher.py
pytest_diagnostics/integrations/: __init__.py  allure_steps.py  httpx_hooks.py  pytest_safe.py  requests_patch.py
pytest_diagnostics/output/: __init__.py  allure_writer.py  formatter.py  summary_builder.py
pytest_diagnostics/rules/: __init__.py  api.py  assertions.py  auth.py  base.py  engine.py  infra.py
pytest_diagnostics/signals/: __init__.py  collectors.py  models.py
pytest_diagnostics/steps/: __init__.py  patterns.py  semantics.py  sequence.py
pytest_diagnostics/utils/: serialization.py  time.py  traceback.py
tests/pytest_diagnostics/: test_allure_step_instrumentation.py  test_allure_writer.py  test_builtin_rules_mock_data.py  test_evidence.py  test_formatter.py  (+6 more)
(+7 files in other folders)
